--- a/styleweb.css
+++ b/styleweb.css
@@ -1,64 +1,59 @@
-body{
-    font: 14px;
-    font-family: arial;
-    background-color: #162719;
-    color: black;
+body {
+  font: 14px;
+  font-family: arial;
+  background-color: #162719;
+  color: black;
 }
 
-.container{
-    border: 5px solid yellow;
-    width: 800px;
-    margin: auto;
-    background-color: khaki;
+.container {
+  border: 5px solid yellow;
+  width: 800px;
+  margin: auto;
+  background-color: khaki;
 }
 
-.header{
-    padding: 5px;
+.header {
+  padding: 5px;
 }
 
-.header .judul{
-    margin-left: 5%;
-    font-size: 30px;
-    font-weight: bold;
+.header .judul {
+  margin-left: 5%;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.header ul li{
-    display: inline-block;
-    margin-top: 10px;
-    margin-right: 5px;
+.content {
+  height: 300px;
+  background-image: url(img/foto1.png);
+  background-size: cover;
+  background-position: 0 -280px;
+  border: 5px solid darkolivegreen;
 }
 
-.header a{
-    text-decoration: none;
-    color: black;
-    padding: 2px;
+.mine {
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
 }
 
-.header a:hover{
-    background-color: darkcyan;
-    color: darkseagreen;
+.mine p {
+  font-size: larger;
+  text-align: justify;
 }
 
-.content{
-    height: 300px;
-    background-image: url(img/foto1.png);   
-    background-size: cover;
-    background-position: 0 -290px;
-    border: 5px solid darkolivegreen;
+.history h2 {
+  margin-left: 50px;
 }
 
-.mine{
-    margin-left: 10px;
-    margin-top: 5px;
-    margin-right: 10px;
+.history p {
+  font-size: larger;
+  text-align: justify;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-right: 10px;
 }
-
-.mine p{
-    font-size: larger;
-}
-
-.footer{
-    background-color: yellow;
-    padding: 5px;
-    text-align: center;
+.footer {
+  background-color: yellow;
+  padding: 5px;
+  text-align: center;
 }
